Configure extra java options - part 2